--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,9 @@
     Please try again
 </p>
 {% else %}
-<p>Please, use the following form to log-in:</p>
+<p>Please, use the following form to log-in.
+    If you don't have an account <a href="{% url 'register' %}">Register here</a>
+</p>
 {% endif %}
 <div class="login-form">
     <form action="{% url 'login' %}" method="post">
@@ -17,5 +19,10 @@
         <input type="hidden" name="next" value="{{next}}" />
         <p><input type="submit" value="Login" /></p>
     </form>
+    <p>
+        <a href="{% url 'password_reset' %}">
+            Forgotten your password?
+        </a>
+    </p>
 </div>
 {% endblock %}
