--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -2,6 +2,14 @@
 {% block title %} Dashboard {% endblock %}
 {% block content %}
 <h1>Dashboard</h1>
+{% with total_images_created=request.user.images_created.count %}
+<p>Welcome to your dashboard. You have bookmarked {{ total_images_created }} image
+    {{ total_images_created|pluralize }}.
+</p>
+{% endwith %}
+<p>Drag the following button to your bookmarks toolbar to bookmark images from other websites
+    -> <a href="javascript:{% include 'image/bookmarklet_launcher.js' %}" class="button">Bookmark it</a>
+</p>
 <p>Welcome to your Dashboard. You can
     <a href="{% url 'edit' %}">Edit your profile</a> or
     <a href="{% url 'password_change' %}">Change your password</a>
