user-follow system module completed

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,10 @@
                 <a href="{% url 'dashboard' %}">My dashboard</a>
             </li>
             <li {% if section is images %}class="selected" {% endif %}>
-                <a href="#">Images</a>
+                <a href="{% url 'images:list' %}">Images</a>
             </li>
             <li {% if section is people %}class="selected" {% endif %}>
-                <a href="#">People</a>
+                <a href="{% url 'user_list' %}">People</a>
             </li>
         </ul>
         {% endif %}
@@ -52,6 +52,17 @@
         {% block content %}
         {% endblock %}
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js">
+    </script>
+    <script>
+        const csrftoken = Cookies.get('csrftoken')
+        document.addEventListener('DOMContentLoaded', (event) => {
+            //DOM loaded
+            {% block domready %}
+            {% endblock %}
+        })
+    </script>
 </body>
 
 </html>
